--- a/css/main.css
+++ b/css/main.css
@@ -1510,15 +1510,16 @@ header .logo a {
 	margin-left: -30px;
 }
 .intro-info img {
-	height: 9rem;
-	width: 9rem;
-	border-radius: 50%;
+	height: 15rem;
+	width: 15rem;
+	border-radius: 5%;
 	margin: .9rem 0 0 0;
 	float: left;
 }
 .intro-info .lead {
 	text-align: left;
-	padding-left: 13rem;
+	padding-left: 20rem;
+	padding-top: 5rem;
 }
 
 .about-content {
