--- a/css/main.css
+++ b/css/main.css
@@ -1510,16 +1510,16 @@ header .logo a {
 	margin-left: -30px;
 }
 .intro-info img {
-	height: 15rem;
-	width: 15rem;
+	height: 16rem;
+	width: 16rem;
 	border-radius: 5%;
 	margin: .9rem 0 0 0;
 	float: left;
 }
 .intro-info .lead {
 	text-align: left;
-	padding-left: 20rem;
-	padding-top: 5rem;
+	padding-left: 25rem;
+	padding-top: 1rem;
 }
 
 .about-content {
@@ -1581,14 +1581,18 @@ header .logo a {
 		margin-right: 0;
 		margin-left: 0;
 	}
+	.intro-info .lead {
+		text-align: left;
+		padding-left: 25rem;
+	}
 }
 @media only screen and (max-width:768px) {
 	.intro-info img {
-		height: 7.8rem;
-		width: 7.8rem;
+		height: 10.8rem;
+		width: 10.8rem;
 	}
 	.intro-info .lead {
-		padding-left: 11rem;
+		padding-left: 15rem;
 	}
 	.about-content h3 {
 		text-align: center;
@@ -1610,8 +1614,8 @@ header .logo a {
 		margin-top: 3rem;
 	}
 	.intro-info img {
-		height: 6.6rem;
-		width: 6.6rem;
+		height: 9.6rem;
+		width: 9.6rem;
 		float: none;
 		display: inline-block;
 	}
