--- a/css/main.css
+++ b/css/main.css
@@ -86,7 +86,8 @@ body {
  */
 a,
 a:visited {
-	color: #000000;
+	color: #6e6e6e;
+	/* color: #000000; */
 	-moz-transition: all 0.3s ease-in-out;
 	-o-transition: all 0.3s ease-in-out;
 	-webkit-transition: all 0.3s ease-in-out;
