--- a/css/main.css
+++ b/css/main.css
@@ -1724,7 +1724,7 @@ header .logo a {
  */
 @media only screen and (max-width:1024px) {
 	#intro {
-		background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+		background: #151515 url(../images/intro-bg.jpg) no-repeat center;
 	}
 
 	.intro-content h1 {
@@ -1742,7 +1742,7 @@ header .logo a {
 
 @media only screen and (max-width:768px) {
 	#intro {
-		background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+		background: #151515 url(../images/intro-bg.jpg) no-repeat center;
 		min-height: 660px;
 	}
 
@@ -1769,7 +1769,7 @@ header .logo a {
 
 @media only screen and (max-width:600px) {
 	#intro {
-		background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+		background: #151515 url(../images/intro-bg.jpg) no-repeat center;
 		min-height: 600px;
 	}
 
