--- a/css/main.css
+++ b/css/main.css
@@ -1576,7 +1576,8 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+	/* background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom; */
+	background: #151515 url(../images/intro-bg.jpg) no-repeat center;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
