--- a/css/main.css
+++ b/css/main.css
@@ -2280,7 +2280,8 @@ header .logo a {
  * ------------------------------------------------------------------
  */
 .popup-modal {
-	max-width: 550px;
+	/* max-width: 550px; */
+	max-width: 1200px;
 	background: #FFFFFF;
 	position: relative;
 	margin: 0 auto;
@@ -2288,6 +2289,7 @@ header .logo a {
 
 .popup-modal .media {
 	position: relative;
+	text-align: center;
 }
 
 .popup-modal img {
