--- a/css/main.css
+++ b/css/main.css
@@ -1291,15 +1291,16 @@ input::-moz-focus-inner {
 }
 
 .section-intro h1 {
+	color: #FF0077;
 	font-family: "poppins-semibold", serif;
 	font-size: 3.6rem;
-	color: #313131;
+	/* color: #313131; */
 	line-height: 1.25;
 	margin-bottom: 1.2rem;
 }
 
 .section-intro h5 {
-	color: #FF0077;
+	color: #313131;
 	font-size: 1.6rem;
 	line-height: 1.875;
 	margin-bottom: 0.3rem;
@@ -1812,9 +1813,9 @@ header .logo a {
  */
 #about {
 	background: #FFFFFF;
-	padding-top: 4rem;
+	padding-top: 6rem;
 	/* padding-top: 12rem; */
-	padding-bottom: 15rem;
+	padding-bottom: 10rem;
 }
 
 #about .section-intro {
@@ -1965,34 +1966,34 @@ header .logo a {
 
 /** 
  * ===================================================================
- * 12. resume - (_layout.scss)
+ * 12. education - (_layout.scss)
  *
  * ------------------------------------------------------------------- 
  */
-#resume {
-	padding-top: 12rem;
-	padding-bottom: 12rem;
+#education {
+	padding-top: 8rem;
+	padding-bottom: 8rem;
 }
 
-#resume .resume-header {
+#education .resume-header {
 	text-align: center;
 }
 
-#resume .resume-header h2 {
+#education .resume-header h2 {
 	color: #FF0077;
 }
 
-#resume .resume-timeline {
+#education .resume-timeline {
 	max-width: 980px;
 }
 
-#resume .timeline-wrap {
+#education .timeline-wrap {
 	position: relative;
 	margin-top: 1.5rem;
 	margin-bottom: 6rem;
 }
 
-#resume .timeline-wrap::before {
+#education .timeline-wrap::before {
 	content: "";
 	display: block;
 	width: 1px;
@@ -2003,12 +2004,12 @@ header .logo a {
 	top: 0;
 }
 
-#resume .timeline-block {
+#education .timeline-block {
 	position: relative;
 	padding-top: 1.5rem;
 }
 
-#resume .timeline-ico {
+#education .timeline-ico {
 	height: 4.8rem;
 	width: 4.8rem;
 	line-height: 4.8rem;
@@ -2022,40 +2023,40 @@ header .logo a {
 	margin-left: -2.4rem;
 }
 
-#resume .timeline-ico i {
+#education .timeline-ico i {
 	position: relative;
 	left: .05rem;
 	top: .2rem;
 }
 
-#resume .timeline-header {
+#education .timeline-header {
 	float: left;
 	width: 35%;
 	padding-right: 90px;
 	text-align: right;
 }
 
-#resume .timeline-header h3 {
+#education .timeline-header h3 {
 	margin-bottom: 0;
 }
 
-#resume .timeline-header p {
+#education .timeline-header p {
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.6rem;
 	color: #888888;
 }
 
-#resume .timeline-content {
+#education .timeline-content {
 	margin-left: 35%;
 	padding-left: 60px;
 }
 
-#resume .timeline-content h4 {
+#education .timeline-content h4 {
 	position: relative;
 	padding-bottom: 1.8rem;
 }
 
-#resume .timeline-content h4::after {
+#education .timeline-content h4::after {
 	content: "";
 	display: block;
 	height: 3px;
@@ -2068,84 +2069,84 @@ header .logo a {
 
 /**
  * responsive:
- * resume
+ * education
  * ------------------------------------------------------------------- 
  */
 @media only screen and (max-width:1024px) {
-	#resume .timeline-header {
+	#education .timeline-header {
 		padding-right: 50px;
 	}
 
-	#resume .timeline-header h3 {
+	#education .timeline-header h3 {
 		font-size: 1.8rem;
 	}
 
-	#resume .timeline-header p {
+	#education .timeline-header p {
 		font-size: 1.4rem;
 	}
 
-	#resume .timeline-content {
+	#education .timeline-content {
 		padding-left: 50px;
 	}
 }
 
 @media only screen and (max-width:768px) {
-	#resume .timeline-wrap::before {
+	#education .timeline-wrap::before {
 		left: 2.4rem;
 	}
 
-	#resume .timeline-ico {
+	#education .timeline-ico {
 		left: 2.4rem;
 	}
 
-	#resume .timeline-header {
+	#education .timeline-header {
 		float: none;
 		width: auto;
 		padding-right: 15px;
 		text-align: left;
 	}
 
-	#resume .timeline-header h3 {
+	#education .timeline-header h3 {
 		font-size: 2rem;
 	}
 
-	#resume .timeline-header p {
+	#education .timeline-header p {
 		font-size: 1.5rem;
 		margin-bottom: 1.5rem;
 	}
 
-	#resume .timeline-content {
+	#education .timeline-content {
 		margin: 0;
 	}
 
-	#resume .timeline-content h4 {
+	#education .timeline-content h4 {
 		padding-bottom: 0;
 		padding-top: 2.1rem;
 		margin-bottom: .6rem;
 		font-size: 1.7rem;
 	}
 
-	#resume .timeline-content h4::after {
+	#education .timeline-content h4::after {
 		bottom: auto;
 		top: 0;
 	}
 
-	#resume .timeline-header,
-	#resume .timeline-content {
+	#education .timeline-header,
+	#education .timeline-content {
 		padding-left: 7rem;
 	}
 }
 
 @media only screen and (max-width:480px) {
-	#resume .resume-header h2 {
+	#education .resume-header h2 {
 		font-size: 2.2rem;
 	}
 
-	#resume .timeline-wrap::before {
+	#education .timeline-wrap::before {
 		left: 1.8rem;
 	}
 
-	#resume .timeline-ico {
+	#education .timeline-ico {
 		height: 3.6rem;
 		width: 3.6rem;
 		line-height: 3.6rem;
@@ -2154,8 +2155,8 @@ header .logo a {
 		font-size: 1.5rem;
 	}
 
-	#resume .timeline-header,
-	#resume .timeline-content {
+	#education .timeline-header,
+	#education .timeline-content {
 		padding-left: 5.5rem;
 	}
 }
@@ -2169,8 +2170,8 @@ header .logo a {
  */
 #portfolio {
 	background: #FFFFFF;
-	padding-top: 12rem;
-	padding-bottom: 12rem;
+	padding-top: 8rem;
+	padding-bottom: 8rem;
 }
 
 #portfolio .folio-item {
@@ -2508,8 +2509,8 @@ header .logo a {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	padding-top: 12rem;
-	padding-bottom: 12rem;
+	padding-top: 8rem;
+	padding-bottom: 8rem;
 	color: white;
 	position: relative;
 }
@@ -2528,11 +2529,11 @@ header .logo a {
 	margin-bottom: 1.8rem;
 }
 
-#services .section-intro h1 {
+#services .section-intro h5 {
 	color: white;
 }
 
-#services .section-intro h5 {
+#services .section-intro h1 {
 	color: #FF0077;
 }
 
@@ -2684,15 +2685,15 @@ header .logo a {
 #contact {
 	/* background: #151515; */
 	background: #131313;
-	padding-top: 12rem;
+	padding-top: 8rem;
 	padding-bottom: 7.2rem;
 }
 
-#contact .section-intro h1 {
+#contact .section-intro h5 {
 	color: white;
 }
 
-#contact .section-intro h5 {
+#contact .section-intro h1 {
 	color: #FF0077;
 }
 
@@ -3099,3 +3100,408 @@ footer .copyright span:last-child::after {
 }
 
 /*# sourceMappingURL=main.css.map */
+
+/* Kai  */
+
+#publications {
+	background: #FFFFFF;
+	padding-top: 12rem;
+	padding-bottom: 12rem;
+}
+
+/** 
+ * ===================================================================
+ * 20. projects - (_layout.scss)
+ *
+ * ------------------------------------------------------------------- 
+ */
+
+#projects {
+	background-color: #e9eff5;
+	padding-top: 8rem;
+	padding-bottom: 8rem;
+}
+
+#projects .resume-header {
+	text-align: center;
+}
+
+#projects .resume-header h2 {
+	color: #FF0077;
+}
+
+#projects .resume-timeline {
+	max-width: 980px;
+}
+
+#projects .timeline-wrap {
+	position: relative;
+	margin-top: 1.5rem;
+	margin-bottom: 6rem;
+}
+
+#projects .timeline-wrap::before {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.1);
+	position: absolute;
+	left: 35%;
+	top: 0;
+}
+
+#projects .timeline-block {
+	position: relative;
+	padding-top: 1.5rem;
+}
+
+#projects .timeline-ico {
+	height: 4.8rem;
+	width: 4.8rem;
+	line-height: 4.8rem;
+	background: #313131;
+	border-radius: 50%;
+	text-align: center;
+	color: #FFFFFF;
+	position: absolute;
+	left: 35%;
+	top: .9rem;
+	margin-left: -2.4rem;
+}
+
+#projects .timeline-ico i {
+	position: relative;
+	left: .05rem;
+	top: .2rem;
+}
+
+#projects .timeline-header {
+	float: left;
+	width: 35%;
+	padding-right: 90px;
+	text-align: right;
+}
+
+#projects .timeline-header h3 {
+	margin-bottom: 0;
+}
+
+#projects .timeline-header p {
+	font-family: "poppins-regular", sans-serif;
+	font-size: 1.6rem;
+	color: #888888;
+}
+
+#projects .timeline-content {
+	margin-left: 35%;
+	padding-left: 60px;
+}
+
+#projects .timeline-content h4 {
+	position: relative;
+	padding-bottom: 1.8rem;
+}
+
+#projects .timeline-content h4::after {
+	content: "";
+	display: block;
+	height: 3px;
+	width: 50px;
+	background: rgba(0, 0, 0, 0.2);
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+
+/**
+ * responsive:
+ * resume
+ * ------------------------------------------------------------------- 
+ */
+@media only screen and (max-width:1024px) {
+	#projects .timeline-header {
+		padding-right: 50px;
+	}
+
+	#projects .timeline-header h3 {
+		font-size: 1.8rem;
+	}
+
+	#projects .timeline-header p {
+		font-size: 1.4rem;
+	}
+
+	#projects .timeline-content {
+		padding-left: 50px;
+	}
+}
+
+@media only screen and (max-width:768px) {
+	#projects .timeline-wrap::before {
+		left: 2.4rem;
+	}
+
+	#projects .timeline-ico {
+		left: 2.4rem;
+	}
+
+	#projects .timeline-header {
+		float: none;
+		width: auto;
+		padding-right: 15px;
+		text-align: left;
+	}
+
+	#projects .timeline-header h3 {
+		font-size: 2rem;
+	}
+
+	#projects .timeline-header p {
+		font-size: 1.5rem;
+		margin-bottom: 1.5rem;
+	}
+
+	#projects .timeline-content {
+		margin: 0;
+	}
+
+	#projects .timeline-content h4 {
+		padding-bottom: 0;
+		padding-top: 2.1rem;
+		margin-bottom: .6rem;
+		font-size: 1.7rem;
+	}
+
+	#projects .timeline-content h4::after {
+		bottom: auto;
+		top: 0;
+	}
+
+	#projects .timeline-header,
+	#projects .timeline-content {
+		padding-left: 7rem;
+	}
+}
+
+@media only screen and (max-width:480px) {
+	#projects .resume-header h2 {
+		font-size: 2.2rem;
+	}
+
+	#projects .timeline-wrap::before {
+		left: 1.8rem;
+	}
+
+	#projects .timeline-ico {
+		height: 3.6rem;
+		width: 3.6rem;
+		line-height: 3.6rem;
+		left: 1.8rem;
+		margin-left: -1.8rem;
+		font-size: 1.5rem;
+	}
+
+	#projects .timeline-header,
+	#projects .timeline-content {
+		padding-left: 5.5rem;
+	}
+}
+
+/** 
+ * ===================================================================
+ * 21. awards - (_layout.scss)
+ *
+ * ------------------------------------------------------------------- 
+ */
+
+#awards {
+	padding-top: 8rem;
+	padding-bottom: 8rem;
+}
+
+#awards .resume-header {
+	text-align: center;
+}
+
+#awards .resume-header h2 {
+	color: #FF0077;
+}
+
+#awards .resume-timeline {
+	max-width: 980px;
+}
+
+#awards .timeline-wrap {
+	position: relative;
+	margin-top: 1.5rem;
+	margin-bottom: 6rem;
+}
+
+#awards .timeline-wrap::before {
+	content: "";
+	display: block;
+	width: 1px;
+	height: 100%;
+	background: rgba(0, 0, 0, 0.1);
+	position: absolute;
+	left: 35%;
+	top: 0;
+}
+
+#awards .timeline-block {
+	position: relative;
+	padding-top: 1.5rem;
+}
+
+#awards .timeline-ico {
+	height: 4.8rem;
+	width: 4.8rem;
+	line-height: 4.8rem;
+	background: #313131;
+	border-radius: 50%;
+	text-align: center;
+	color: #FFFFFF;
+	position: absolute;
+	left: 35%;
+	top: .9rem;
+	margin-left: -2.4rem;
+}
+
+#awards .timeline-ico i {
+	position: relative;
+	left: .05rem;
+	top: .2rem;
+}
+
+#awards .timeline-header {
+	float: left;
+	width: 35%;
+	padding-right: 90px;
+	text-align: right;
+}
+
+#awards .timeline-header h3 {
+	margin-bottom: 0;
+}
+
+#awards .timeline-header p {
+	font-family: "poppins-regular", sans-serif;
+	font-size: 1.6rem;
+	color: #888888;
+}
+
+#awards .timeline-content {
+	margin-left: 35%;
+	padding-left: 60px;
+}
+
+#awards .timeline-content h4 {
+	position: relative;
+	padding-bottom: 1.8rem;
+}
+
+#awards .timeline-content h4::after {
+	content: "";
+	display: block;
+	height: 3px;
+	width: 50px;
+	background: rgba(0, 0, 0, 0.2);
+	position: absolute;
+	left: 0;
+	bottom: 0;
+}
+
+/**
+ * responsive:
+ * resume
+ * ------------------------------------------------------------------- 
+ */
+@media only screen and (max-width:1024px) {
+	#awards .timeline-header {
+		padding-right: 50px;
+	}
+
+	#awards .timeline-header h3 {
+		font-size: 1.8rem;
+	}
+
+	#awards .timeline-header p {
+		font-size: 1.4rem;
+	}
+
+	#awards .timeline-content {
+		padding-left: 50px;
+	}
+}
+
+@media only screen and (max-width:768px) {
+	#awards .timeline-wrap::before {
+		left: 2.4rem;
+	}
+
+	#awards .timeline-ico {
+		left: 2.4rem;
+	}
+
+	#awards .timeline-header {
+		float: none;
+		width: auto;
+		padding-right: 15px;
+		text-align: left;
+	}
+
+	#awards .timeline-header h3 {
+		font-size: 2rem;
+	}
+
+	#awards .timeline-header p {
+		font-size: 1.5rem;
+		margin-bottom: 1.5rem;
+	}
+
+	#awards .timeline-content {
+		margin: 0;
+	}
+
+	#awards .timeline-content h4 {
+		padding-bottom: 0;
+		padding-top: 2.1rem;
+		margin-bottom: .6rem;
+		font-size: 1.7rem;
+	}
+
+	#awards .timeline-content h4::after {
+		bottom: auto;
+		top: 0;
+	}
+
+	#awards .timeline-header,
+	#awards .timeline-content {
+		padding-left: 7rem;
+	}
+}
+
+@media only screen and (max-width:480px) {
+	#awards .resume-header h2 {
+		font-size: 2.2rem;
+	}
+
+	#awards .timeline-wrap::before {
+		left: 1.8rem;
+	}
+
+	#awards .timeline-ico {
+		height: 3.6rem;
+		width: 3.6rem;
+		line-height: 3.6rem;
+		left: 1.8rem;
+		margin-left: -1.8rem;
+		font-size: 1.5rem;
+	}
+
+	#awards .timeline-header,
+	#awards .timeline-content {
+		padding-left: 5.5rem;
+	}
+}
